...
      label: 'Теплица',
      path: '/',
    ),
    (
      icon: Icons.park_outlined,
      activeIcon: Icons.park,
      label: 'Тропа',
      path: '/garden',
    ),
    (
      icon: Icons.settings_outlined,
      activeIcon: Icons.settings,
      label: 'Ещё',
...
